# AIpaca

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  SECURITY.md  gradle.properties  gradlew  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  stable_diffusion_jni.cpp  whisper_jni.cpp
app/src/main/kotlin/com/aipaca/app/: AIpacaApp.kt  EngineState.kt  ImageGenState.kt
app/src/main/kotlin/com/aipaca/app/agent/: AgentConfig.kt  AgentLoop.kt  AgentSession.kt  ToolCallParser.kt
app/src/main/kotlin/com/aipaca/app/agent/mcp/: HttpMcpClient.kt  McpClient.kt  McpModels.kt
app/src/main/kotlin/com/aipaca/app/agent/tool/: TavilyMcp.kt  ToolRegistry.kt
app/src/main/kotlin/com/aipaca/app/data/: AgentPrefs.kt  ChatConversationStore.kt  DownloadedModelStore.kt  HuggingFaceApi.kt  MmprojModelPrefs.kt  ModelDownloadManager.kt  WhisperModelPrefs.kt
app/src/main/kotlin/com/aipaca/app/engine/: AudioRecorder.kt  ImageGenerationEngine.kt  InferenceEngine.kt  LlamaCppEngine.kt  StableDiffusionEngine.kt  WhisperEngine.kt
app/src/main/kotlin/com/aipaca/app/model/: ChatMessage.kt  StoredConversation.kt
app/src/main/kotlin/com/aipaca/app/server/: ApiServer.kt  ApiService.kt  ServerManager.kt
app/src/main/kotlin/com/aipaca/app/server/models/: OpenAIModels.kt
app/src/main/kotlin/com/aipaca/app/server/security/: AuthPlugin.kt  AuthorizedKeysStore.kt  Ed25519Verifier.kt  PairingManager.kt  TlsManager.kt
app/src/main/kotlin/com/aipaca/app/ui/: MainActivity.kt
app/src/main/kotlin/com/aipaca/app/ui/chat/: ChatHistoryBus.kt  ChatScreen.kt
app/src/main/kotlin/com/aipaca/app/ui/components/: AlpacaBottomNav.kt  EditorialDivider.kt  EditorialMasthead.kt  InlineCTA.kt  ModelPickerButton.kt  MonoLabel.kt  StatusChip.kt
app/src/main/kotlin/com/aipaca/app/ui/image/: ImageScreen.kt
app/src/main/kotlin/com/aipaca/app/ui/models/: GgufFilePickerSheet.kt  ModelScreen.kt
app/src/main/kotlin/com/aipaca/app/ui/server/: ServerScreen.kt
app/src/main/kotlin/com/aipaca/app/ui/theme/: AlpacaColors.kt  RetroCli.kt  Theme.kt  Typography.kt
app/src/main/kotlin/com/lamaphone/app/: EngineState.kt  LamaPhoneApp.kt
app/src/main/kotlin/com/lamaphone/app/data/: ChatConversationStore.kt
app/src/main/kotlin/com/lamaphone/app/engine/: InferenceEngine.kt  LlamaCppEngine.kt
app/src/main/kotlin/com/lamaphone/app/model/: ChatMessage.kt  StoredConversation.kt
app/src/main/kotlin/com/lamaphone/app/server/: ApiServer.kt  ApiService.kt  ServerManager.kt
app/src/main/kotlin/com/lamaphone/app/server/models/: OpenAIModels.kt
app/src/main/kotlin/com/lamaphone/app/server/security/: AuthPlugin.kt  AuthorizedKeysStore.kt  Ed25519Verifier.kt  PairingManager.kt  TlsManager.kt
app/src/main/kotlin/com/lamaphone/app/ui/: MainActivity.kt
app/src/main/kotlin/com/lamaphone/app/ui/chat/: ChatHistoryBus.kt  ChatScreen.kt
app/src/main/kotlin/com/lamaphone/app/ui/components/: ModelPickerButton.kt
app/src/main/kotlin/com/lamaphone/app/ui/models/: ModelScreen.kt
app/src/main/kotlin/com/lamaphone/app/ui/server/: ServerScreen.kt
app/src/main/kotlin/com/lamaphone/app/ui/theme/: RetroCli.kt  Theme.kt  Typography.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/kotlin/com/aipaca/app/agent/: AgentLoopTest.kt  AgentSessionTest.kt  ToolCallParserTest.kt
app/src/test/kotlin/com/aipaca/app/agent/mcp/: HttpMcpClientTest.kt
app/src/test/kotlin/com/aipaca/app/agent/tool/: ToolRegistryTest.kt
app/src/test/kotlin/com/aipaca/app/data/: DownloadedModelStoreTest.kt  HuggingFaceApiTest.kt  ModelDownloadManagerTest.kt
app/src/test/kotlin/com/aipaca/app/ui/models/: GgufFilePickerSheetTest.kt
docs/: api-client-guide.md  lab_journal.md
examples/python/: README.md  chat.py  pair.py
gradle/: libs.versions.toml
research_notes/: 00_repo_analysis.md  10_research_mcp_kotlin.md  20_kurzbericht_edge_kontext_agentik.md  arxiv_belege_edge_kontext.md  kv_calc.py  spec_issue_42_web_search_mcp.md  spec_issue_43_agent_mode.md
